[package]
name = "rust_wave_plotter"
version = "0.1.0"
edition = "2021"
authors = ["MajorX234 <majorx234@googlemail.com>"]

[lib]
name = "audio_lib"
path = "src/lib.rs"

[[bin]]
name = "rust_wave_plotter"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.18.0"}
scan_fmt = "0.2.6"
clap = { version = "4.1.4"}
